# path-tracer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  depsCache.json
.github/codeql/: codeql-config.yml
.github/workflows/: clang-format.yml  cmake-debug.yml  cmake-release.yml  cmake.yml  codeql-analysis.yml  license-check.yml
Docker/: quickbuild.Dockerfile
scripts/: clang-format.sh  license-add.sh  license-check.sh  moveFiles.ps1  moveFiles.sh  renameDir.ps1  runGcov.sh
shaders/: uiShader.frag  uiShader.vert
src/: CMakeLists.txt  PathTracerStatic.cpp  main.cpp
src/fileParsers/: CMakeLists.txt  image.cpp  image.h  imageExporter.cpp  imageExporter.h  model.cpp  model.h
src/main/: CMakeLists.txt  main.cpp
src/raycast/: CMakeLists.txt  camera.cpp  camera.h  hit.cpp  hit.h  ray.cpp  ray.h
src/renderer/: CMakeLists.txt  boundingBox.cpp  boundingBox.h  pathTracer.cpp  pathTracer.h  pixelBuffer.cpp  pixelBuffer.h  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shape.cpp  shape.h  texture.cpp  texture.h
src/scene/: CMakeLists.txt  light.cpp  light.h  scene.cpp  scene.h  triangle.cpp  triangle.h
src/test/: CMakeLists.txt  test.cpp
src/version/: CMakeLists.txt  CMakeListsVersion.cmake  version.cpp.in  version.h
src/window/: CMakeLists.txt  glfwWindow.cpp  glfwWindow.h  pixelBuffer.cpp  pixelBuffer.h  singleton.h  window.cpp  window.h
test/: CMakeLists.txt  test.cpp
test/fileParsers/: CMakeLists.txt  fileParserTest.cpp
test/fileParsers/sln/: cube.ppm  diablo.ppm  diabloLight.ppm  head.ppm  headLight.ppm  monkey.ppm  monkeyLight.ppm  pyramid.ppm  square.ppm
test/raycast/: CMakeLists.txt  cameraTest.cpp  rayTest.cpp
test/renderer/: CMakeLists.txt  pixelBufferTest.cpp  rendererTest.cpp
test/scene/: CMakeLists.txt  sceneTest.cpp  triangleTest.cpp
test/window/: CMakeLists.txt  pixelBufferTest.cpp  windowTest.cpp
